# Cognee-Mentat

mentat-backend/: main.py  pyproject.toml
mentat-frontend/: package-lock.json  package.json
mentat-frontend/src/: db.tsx
mentat-frontend/src/components/: GraphView.tsx  Sidebar.tsx
